# nfrecon

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml
examples/dynamic/3d_cmr/: run.sh
examples/dynamic/3d_cmr/configs/data/: 3d_cmr.yaml
examples/dynamic/3d_cmr/configs/loss/: 3d_cmr.yaml
examples/dynamic/3d_cmr/configs/model/: 3d_cmr.yaml
examples/dynamic/3d_cmr/configs/optimizer/: 3d_cmr.yaml
examples/dynamic/3d_cmr/configs/samplers/: 3d_cmr.yaml
examples/dynamic/3d_cmr/processing/: cmr_to_nfrecon.py
examples/dynamic/3d_mri_thigh/: run.sh
examples/dynamic/3d_mri_thigh/processing/: thigh_to_nfrecon.py
examples/dynamic/ocmr/: run.sh
examples/dynamic/ocmr/processing/: ocmr_to_nfrecon.py  read_ocmr.py  undersampling.py
nfrecon/: cli.py  evaluate.py  reconstruct.py
nfrecon/configs/: config.yaml
nfrecon/configs/data/: default.yaml
nfrecon/configs/loss/: default.yaml
nfrecon/configs/model/: default.yaml
nfrecon/configs/model/coil_sensitivity/: siren_nfe.yaml
nfrecon/configs/model/magnetization/: siren_nfe.yaml
nfrecon/configs/optimizer/: default.yaml
nfrecon/configs/samplers/: default.yaml
nfrecon/configs/setup/: default.yaml
nfrecon/data/: dataset.py
nfrecon/forward_models/: multicoil.py
nfrecon/loss/: loss_base.py  multicoil_loss.py
nfrecon/neural_fields/: mlp.py  nfe.py  nfe_factories.py  number_field_utils.py  siren.py
nfrecon/optimizer/: trainer.py
nfrecon/samplers/: grids.py  init_utils.py  samplers.py
nfrecon/utils/: fourier.py  hydra_tools.py  io.py  kspace.py  scalars.py
(+9 files in other folders)
